--- a/apps/minting-dapp-ui/src/styles/forms.scss
+++ b/apps/minting-dapp-ui/src/styles/forms.scss
@@ -15,26 +15,26 @@
   text-align: center;
 }
 
-@tailwind base;
-@layer base {
-  [type='text'],
-  [type='email'],
-  [type='url'],
-  [type='password'],
-  [type='number'],
-  [type='date'],
-  [type='datetime-local'],
-  [type='month'],
-  [type='search'],
-  [type='tel'],
-  [type='time'],
-  [type='week'],
-  [multiple],
-  textarea,
-  select {
-    @apply w-full border border-gray-300 rounded-lg shadow-sm focus:outline-none focus:border-indigo-500 focus:ring-1 text-gray-800;
-  }
-}
+// @tailwind base;
+// @layer base {
+//   [type='text'],
+//   [type='email'],
+//   [type='url'],
+//   [type='password'],
+//   [type='number'],
+//   [type='date'],
+//   [type='datetime-local'],
+//   [type='month'],
+//   [type='search'],
+//   [type='tel'],
+//   [type='time'],
+//   [type='week'],
+//   [multiple],
+//   textarea,
+//   select {
+//     @apply w-full border border-gray-300 rounded-lg shadow-sm focus:outline-none focus:border-indigo-500 focus:ring-1 text-gray-800;
+//   }
+// }
 
 label.span {
   @apply block text-sm font-medium text-gray-700;
@@ -42,4 +42,15 @@ label.span {
 
 .form-error {
   @apply text-danger text-right;
+}
+
+
+.btn {
+  @apply font-bold py-2 px-4 rounded;
+}
+.btn-blue {
+  @apply bg-green-500 text-white;
+}
+.btn-blue:hover {
+  @apply bg-green-700;
 }
